--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,25 +17,25 @@ jobs:
 
 
     steps:
-    - name: Checkout code
+      name: Checkout code
       uses: actions/checkout@v3
 
 
 
-    - name: Set up Python
+      name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
 
 
-    - name: Install dependencies
+      name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install fastapi uvicorn slowapi passlib[bcrypt] python-jose pydantic
 
 
 
-    - name: Confirm main.py exists
+      name: Confirm main.py exists
       run: test -f main.py && echo "main.py is present"
 
