--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -25,7 +25,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://127.0.0.1:8000'
-          cmd_options: '-r zap_report.html'
+          cmd_options: '-t 5 -a -r zap_report.html'
 
       - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
