--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -1,17 +1,20 @@
 name: ZAP Security Scan With Report
 
 on:
+
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
+
   zap_scan:
     runs-on: ubuntu-latest
     name: OWASP ZAP Scan
 
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -25,7 +28,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://127.0.0.1:8000'
-          cmd_options: '-t 5 -a -r zap_report.html'
+          cmd_options: '-r zap_report.html'
 
       - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
